--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm"
+
   },
   "author": "AbdallahElsaeed",
   "license": "ISC",
@@ -16,6 +18,10 @@
     "mongoose": "^5.11.13",
     "multer": "^1.4.2"
   },
+  "engines": {
+    "node": "14.15.3"
+  },
+    
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
