--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon --inspect index.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm"
-
   },
   "author": "AbdallahElsaeed",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
@@ -21,7 +21,6 @@
   "engines": {
     "node": "14.15.3"
   },
-    
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
